Code Base/objects/ConfigMaterial__c.object
<CustomObject>
    <description>This object is created for configuring sub-category with its param for materials.</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Electronic Item~E</fullName>
                </value>
                <value>
                    <fullName>Mechanical Item~M</fullName>
                </value>
                <value>
                    <fullName>Consumables~C</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous~MS</fullName>
                </value>
                <value>
                    <fullName>Sub Assembly~SA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ParamName1__c</fullName>
        <label>ParamName1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParamName2__c</fullName>
        <label>ParamName2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParamName3__c</fullName>
        <label>ParamName3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubCategory__c</fullName>
        <label>SubCategory</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>ConfigMaterial</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SubCategory__c</columns>
        <columns>ParamName1__c</columns>
        <columns>ParamName2__c</columns>
        <columns>ParamName3__c</columns>
        <columns>ParamName4__c</columns>
        <columns>ParamName5__c</columns>
        <columns>ParamName6__c</columns>
        <columns>ParamName7__c</columns>
        <columns>ParamName8__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>SubCategory__c</columns>
        <columns>ParamName1__c</columns>
        <columns>ParamName2__c</columns>
        <columns>ParamName3__c</columns>
        <columns>ParamName4__c</columns>
        <columns>ParamName5__c</columns>
        <columns>ParamName6__c</columns>
        <columns>ParamName7__c</columns>
        <columns>ParamName8__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>config-{000}</displayFormat>
        <label>ConfigMaterial Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ConfigMaterials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>